<resources>
    <string name="app_name">ClassStudentManagement</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="add_user_info">Add User Info</string>
    <string name="add_image">Add Image</string>
    <string name="download_image">Download Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="downloaded_image">Downloaded image</string>
    <string name="number_of_allowed_posts">Number of allowed posts</string>
    <integer name="default_value">500</integer>
</resources>