<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublishActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edittext_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        android:layout_margin="@dimen/edittext_margin" />

    <Button
        android:id="@+id/add_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user_info"
        app:layout_constraintTop_toBottomOf="@+id/add_button"
        android:layout_margin="@dimen/edittext_margin" />

    <Button
        android:id="@+id/add_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        app:layout_constraintTop_toBottomOf="@+id/add_user_info"
        android:layout_margin="@dimen/edittext_margin" />

    <Button
        android:id="@+id/download_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_image"
        app:layout_constraintTop_toBottomOf="@+id/add_image"
        android:layout_margin="@dimen/edittext_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>